Fun specific vocabulary.

--- a/src/main/resources/assets/stairdown/lang/en_US.lang
+++ b/src/main/resources/assets/stairdown/lang/en_US.lang
@@ -1,6 +1,6 @@
 itemGroup.stairdown=StairDown
 
-tile.bamboo_giant.name=Giant Bamboo Log
+tile.bamboo_giant.name=Giant Bamboo Culm
 
 tooltips.stairs=(Stairs)
 tooltips.hollow=(Hollow)
